Adicionado botão header

--- a/desafioUpMedal/store/blocks/header/top-menu.jsonc
+++ b/desafioUpMedal/store/blocks/header/top-menu.jsonc
@@ -261,7 +261,7 @@
         "size": "regular"
       },
       "href": "https://portal.aws.amazon.com/billing/signup#/start",
-      "label": "SignUp"
+      "label": "Crie uma conta da AWS"
     }
   }
 }
