--- a/desafioUpMedal/store/blocks/home/home.jsonc
+++ b/desafioUpMedal/store/blocks/home/home.jsonc
@@ -146,7 +146,7 @@
 
   "image#1middle": {
     "props": {
-      "src": "https://i.imgur.com/8KCqn67.png"
+      "src": "https://i.imgur.com/QxnwMGc.png"
     }
   },
 
